--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
+url = "2.5"
 libltntstools-sys = {path = "/storage/dev/ltntstools-build-environment/libltntstools/rust/libltntstools-sys"}
+
